prod_snapshot_2015-09-24_1030/objects/DealChicken_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DealChicken Contracts</relationshipLabel>
        <relationshipName>DealChicken_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Contract__c</fullName>
        <formula>IF( Execution_Date__c &lt; TODAY()  &amp;&amp;  Renewal_Date__c &gt; Today(), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Department__c</fullName>
        <label>Contract Department</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DealChicken_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Costs__c</fullName>
        <label>Monthly Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Negotiation_Window_Notice__c</fullName>
        <label>Negotiation Window Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Based_Costs__c</fullName>
        <label>Performance Based Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice__c</fullName>
        <label>Renewal Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_up_Costs__c</fullName>
        <label>Set-up Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Notice__c</fullName>
        <label>Termination Notice</label>
        <type>Date</type>
    </fields>
    <label>DealChicken Contract</label>
    <nameField>
        <displayFormat>DCC-{0000}</displayFormat>
        <label>DealChicken Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealChicken Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>